@@ -35,8 +35,15 @@
  *
  * Revisions   :
  *    $Log$
+ *    Revision 1.12.2.2  2005/04/03 20:10:50  david__schmidt
+ *    Thanks to Jindrich Makovicka for a race condition fix for the log
+ *    file.  The race condition remains for non-pthread implementations.
+ *    Reference patch #1175720.
+ *
  *    Revision 1.12.2.1  2003/03/07 03:41:05  david__schmidt
- *    Wrapping all *_r functions (the non-_r versions of them) with mutex semaphores for OSX.  Hopefully this will take care of all of those pesky crash reports.
+ *    Wrapping all *_r functions (the non-_r versions of them) with mutex 
+ *    semaphores for OSX.  Hopefully this will take care of all of those pesky
+ *    crash reports.
  *
  *    Revision 1.12  2002/03/26 22:29:55  swa
  *    we have a new homepage!
@@ -127,6 +134,11 @@ extern pthread_mutex_t localtime_mutex;
 extern pthread_mutex_t gethostbyaddr_mutex;
 extern pthread_mutex_t gethostbyname_mutex;
 #endif /* def OSX_DARWIN */
+
+#ifdef FEATURE_PTHREAD
+extern pthread_mutex_t log_mutex;
+extern pthread_mutex_t log_init_mutex;
+#endif /* FEATURE_PTHREAD */
 
 /* Functions */
 
